deployment2.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment2
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: volume
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          resources:
            requests:
              cpu: "1m"
              memory: "20Mi"
            limits:
              cpu: "10m"
              memory: "20Mi"
      volumes:
      - name: volume
        configMap:
          name: index
