service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 30000
      targetPort: 80
